tests/ui/sqlite_strict_affinity/fail/non_strict_rejects_any.stderr
error: column `payload` uses `ANY`, which is only allowed on STRICT tables; add `#[SQLiteTable(strict)]`
 --> tests/ui/sqlite_strict_affinity/fail/non_strict_rejects_any.rs:8:5
  |
8 |     payload: String,
  |     ^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `NonStrictAny`
  --> tests/ui/sqlite_strict_affinity/fail/non_strict_rejects_any.rs:12:13
   |
12 |     let _ = NonStrictAny::default();
   |             ^^^^^^^^^^^^ use of undeclared type `NonStrictAny`
